Finished up webpage, added the rest of the headers and list and also added and designed the table at the very end, corrected the spacing at the top and bottom of the body

--- a/style.css
+++ b/style.css
@@ -3,9 +3,12 @@
     padding: 0;
 }
 
+
 body{
+
     background-color: hsl(30, 54%, 90%);
-    font-family: 'Outfit family', sans-serif;
+    font-family: sans-serif;
+
 }
 
 p{
@@ -15,19 +18,30 @@ p{
 
 }
 
+li {
+    color: hsl(30, 10%, 34%);
+}
+
+ol li::marker {
+    font-family: 'Outfit', sans-serif;
+    fonr-weight: 400;
+    color: hsl(14, 45%, 36%);
+}
+
+ol li{
+    padding-left: 10px;
+}
+
+
 .menu-box{
 
     width: 720px;
     height: fit-content;
     padding: 24px;
-    position: absolute;
-    margin: auto;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    margin: 30px auto;
     background-color: white;
     border-radius: 20px;
+    box-sizing: border-box;
 }
 
 .food_Image img{
@@ -75,22 +89,81 @@ h3{
 .prep_Time li{
     padding-top: 20px;
     font-size: 16px;
-    color: hsl(30, 10%, 34%);
+
 }
 
 .Ingredients_Header {
     padding: 20px 0px 10px 0px;
 }
 .Ingredients_List{
-    padding-bottom: 20px;
+    padding-bottom: 30px;
 }
 .Ingredients_List li{
     padding-top: 20px;
 
-    color: hsl(30, 10%, 34%);
 }
 
 .border_line {
     border: 1px solid hsl(30, 18%, 87%);
     margin: 0px 10px;
+
 }
+
+.Instructions_Header {
+    padding: 30px 0px 10px 0px;
+
+}
+
+.Instructions_Steps {
+    padding-left: 30px;
+    padding-bottom: 30px;
+}
+
+.Instructions_Steps li{
+    padding-top: 10px;
+
+}
+
+.Nutrition_Header {
+    padding-top: 30px;
+}
+
+.Nutrition_text {
+    padding: 20px 0px;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+    margin: 0px 10px;
+
+}
+tr {
+    border-bottom: 1px solid hsl(30, 18%, 87%);
+}
+
+td {
+    padding: 10px 0px;
+}
+
+.bolden_int {
+    padding-right: 10px;
+    font-family: 'Outfit',sans-serif;
+    font-weight: 700;
+    color: hsl(14, 45%, 36%);
+
+}
+
+.nutrition_table p{
+    padding-left: 20px;
+}
+
+.fat_row{
+    border-bottom: none;
+}
+
+
+
+
+
+
